traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:35: error: Missing closing brace `}' assumed here
	override def forward(i:Int)  { 
        ^TraversalByColumn:35: error: Missing closing brace `}' assumed here
	override def forward(i:Int)  { 
        ^